(4) COMPONENTA 'LINK-SAGEATA'

--- a/index.html
+++ b/index.html
@@ -20,16 +20,6 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- COMANDA: 'h${ Titlu $}*3' -->
-    <h1>Titlu 1</h1>
-    <h2>Titlu 2</h2>
-    <h3>Titlu 3</h3>
-
-    <!-- COMANDA: 'p>Lorem20' -->
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus itaque
-      reprehenderit totam laudantium accusamus sunt voluptatem explicabo
-      consectetur maxime dolor.
-    </p>
+    <a href="#" class="link-sageata">Aflați mai multe</a>
   </body>
 </html>
