--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <a href="#" class="link-sageata">Aflați mai multe</a>
+    <span class="badge badge--principal">10% Reducere</span>
+    <br />
+    <span class="badge badge--secundar badge--mic">10% Reducere</span>
   </body>
 </html>
