--- a/componente/liste/lists.html
+++ b/componente/liste/lists.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>liste</title>
 
     <!-- GOOGLE  FONTS (INTER - REGULAR, BOLD) -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -14,10 +14,10 @@
     />
 
     <!-- NORMALIZE CSS -->
-    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
 
     <!-- STYLE CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/lists.css" />
   </head>
   <body>
     <!-- COMANDA: "ul.list>li{Element $}*3" -->
