--- a/componente/buttons/buttons.html
+++ b/componente/buttons/buttons.html
@@ -17,7 +17,7 @@
     <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
 
     <!-- STYLE CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/buttons.css" />
   </head>
 
   <body>
