--- a/componente/INPUT-GROUP/input-group.html
+++ b/componente/INPUT-GROUP/input-group.html
@@ -14,10 +14,10 @@
     />
 
     <!-- NORMALIZE CSS -->
-    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
 
     <!-- STYLE CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/input-group.css" />
   </head>
 
   <body>
