--- a/componente/COLLAPSIBLES/collapsibles.html
+++ b/componente/COLLAPSIBLES/collapsibles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>COLLAPSIBLE (PLIABILE)</title>
 
     <!-- GOOGLE  FONTS (INTER - REGULAR, BOLD) -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -14,10 +14,10 @@
     />
 
     <!-- NORMALIZE CSS -->
-    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
 
     <!-- STYLE CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/collapsibles.css" />
   </head>
 
   <body>
@@ -40,6 +40,6 @@
     </div>
 
     <!-- IMPORTARE  JAVASCRIPT FILE -->
-    <script src="js/main.js"></script>
+    <script src="js/collapsibles.js"></script>
   </body>
 </html>
