ANIMATION_ON_SCROLL

--- a/eroare_izolata.html
+++ b/eroare_izolata.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PlayGround (Loc de Joaca)</title>
 
     <!-- GOOGLE  FONTS (INTER - REGULAR, BOLD) -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -21,8 +21,9 @@
   </head>
 
   <body>
-    <!-- SEC. 'DOMENII'  -->
-    <section class="bloc container bloc-domenii">
+    <!-- IZOLAM "PROBLEMA"  -->
+    <!-- (CP 3) SEC. 'DOMENII'  -->
+    <sectio class="bloc container bloc-domenii">
       <!-- HEADER SEC. -->
       <header class="bloc__header">
         <h2>Incepand de la 8 &euro;/luna</h2>
@@ -60,10 +61,9 @@
         <li>.info 13&euro;</li>
         <li>.space 10&euro;</li>
       </ul>
-    </section>
+    </sectio>
     <!-- ----------------------------------------------------------- -->
 
-    <!-- ----------------------------------------------------------- -->
     <!-- JAVASCRIPT FILE (IMPORT) -->
     <script src="js/main.js"></script>
   </body>
