--- a/_SECTIUNI/FOOTERS/index.html
+++ b/_SECTIUNI/FOOTERS/index.html
@@ -27,7 +27,7 @@
       <div class="container grid footer__sections">
         <!-- COLLAPSIBLES 1 (PLIABILE) -->
         <section class="collapsible collapsible--deschis footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__titlu footer__titlu">Produse</h2>
 
             <!-- ICON 'SVG' -->
@@ -35,7 +35,7 @@
               <!-- INCARCAM DIN FISIERUL 'SPRITE.SVC'-- ID-UL '#CHEVRON'  -->
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
 
           <div class="collapsible__continut">
             <!-- LISTA -->
