--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <!-- [SEO 3.1] - 'META - OPEN GRAPH - TITLU' (APARE LA 'SHARE' - PE 'FACEBOOK') -->
     <meta
       property="og:title"
-      content="CloudHosting - Mergi online pentru numai
+      content="Marius Cloud Hosting - Mergi online pentru numai
     8&euro;"
     />
 
     <!-- [SEO 3.2] - 'META - OPEN GRAPH - DESCRIERE' (APARE LA 'SHARE' - PE 'FACEBOOK') -->
     <meta
       property="og:description"
-      content="CloudHosting - Creat de Marius
+      content="Marius Cloud Hosting - Creat de Marius
     Chivu in scop educational."
     />
 
@@ -73,10 +73,18 @@
 
         <!-- (3) LISTA 'MENIU' -->
         <ul class="list nav__list collapsible__continut">
-          <li class="nav__item"><a href="#">Gazduire Web</a></li>
-          <li class="nav__item"><a href="#">VPS</a></li>
-          <li class="nav__item"><a href="#">Domeniu Web</a></li>
-          <li class="nav__item"><a href="#">Preturi</a></li>
+          <li class="nav__item">
+            <a href="http://artificial-intelligence.ro/">Gazduire Web</a>
+          </li>
+          <li class="nav__item">
+            <a href="http://artificial-intelligence.ro/">VPS</a>
+          </li>
+          <li class="nav__item">
+            <a href="http://artificial-intelligence.ro/">Domeniu Web</a>
+          </li>
+          <li class="nav__item">
+            <a href="http://artificial-intelligence.ro/">Preturi</a>
+          </li>
         </ul>
       </nav>
       <!-- _________________________________________________________ -->
@@ -121,7 +129,7 @@
     <section data-aos="fade-up" class="bloc container bloc-domenii">
       <!-- HEADER SEC. -->
       <header class="bloc__header">
-        <h2>Incepand de la 8 &euro;/luna</h2>
+        <h2>Incepand de la 8&euro; pe luna</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, iste?
         </p>
@@ -166,13 +174,13 @@
         <div class="plan">
           <div class="card card--secundar">
             <!-- HEADER CARD -->
-            <header class="card__header">
+            <div class="card__header">
               <h3 class="plan__nume">Intrare</h3>
-              <span class="plan__pret">12&#8364;</span>
+              <span class="plan__pret">8&#8364;</span>
               <span class="plan__facturare-ciclu">/luna</span>
               <span class="badge badge--secundar badge--mic">10% REDUS</span>
               <span class="plan__descriere">Pornire ușoară pe cloud</span>
-            </header>
+            </div>
 
             <!-- BODY CARD -->
             <div class="card__body">
@@ -185,7 +193,7 @@
               </ul>
 
               <!-- BUTON -->
-              <button class="btn ntn--outline btn-block">Cumpara Acum</button>
+              <button class="btn btn--outline btn-block">Cumpara Acum</button>
             </div>
           </div>
         </div>
@@ -195,13 +203,13 @@
         <div class="plan plan--popular">
           <div class="card card--principal">
             <!-- HEADER CARD -->
-            <header class="card__header">
+            <div class="card__header">
               <h3 class="plan__nume">Intrare</h3>
-              <span class="plan__pret">12&#8364;</span>
+              <span class="plan__pret">10&#8364;</span>
               <span class="plan__facturare-ciclu">/luna</span>
               <span class="badge badge--principal badge--mic">10% REDUS</span>
               <span class="plan__descriere">Pornire ușoară pe cloud</span>
-            </header>
+            </div>
 
             <!-- BODY CARD -->
             <div class="card__body">
@@ -214,7 +222,7 @@
               </ul>
 
               <!-- BUTON -->
-              <button class="btn ntn--outline btn-block">Cumpara Acum</button>
+              <button class="btn btn--outline btn-block">Cumpara Acum</button>
             </div>
           </div>
         </div>
@@ -243,7 +251,7 @@
               </ul>
 
               <!-- BUTON -->
-              <button class="btn ntn--outline btn-block">Cumpara Acum</button>
+              <button class="btn tn--outline btn-block">Cumpara Acum</button>
             </div>
           </div>
         </div>
@@ -254,13 +262,13 @@
 
     <!-- (CP 5) SEC. 'CARACTERISTICI'  -->
     <section data-aos="fade-up" class="bloc container">
-      <header class="bloc__header">
+      <div class="bloc__header">
         <h2>Găzduirea pe Cloud pentru Mentinerea Cresterii</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed,
           officia?
         </p>
-      </header>
+      </div>
 
       <!-- ARTICOL 1 -->
       <article class="grid grid--2-cols caracteristica">
@@ -314,8 +322,8 @@
             <!-- ICON 'SVG' -->
             <svg class="icon icon--principal">
               <!-- INCARCAM DIN FISI
-              ERUL 'SPRITE.SVG'__ ID-UL '#FAST'  -->
-              <use xlink:href="images/sprite.svg#fast"></use>
+              ERUL 'SPRITE.SVG'__ ID-UL '#COMPUTER'  -->
+              <use xlink:href="images/sprite.svg#computer"></use>
             </svg>
           </span>
 
@@ -347,6 +355,94 @@
           <img
             class="caracteristica__imagine"
             src="images/fast@2x.jpg"
+            alt=""
+          />
+        </picture>
+      </article>
+
+      <!-- ARTICOL 3 -->
+      <article class="grid grid--2-cols caracteristica">
+        <div data-aos="fade-right" class="caracteristica__continut">
+          <!-- INTRODUCEM ICON IN CONTAINER (PT. CREARE CERC) -->
+          <span class="icon-container">
+            <!-- ICON 'SVG' -->
+            <svg class="icon icon--principal">
+              <!-- INCARCAM DIN FISI
+              ERUL 'SPRITE.SVG'__ ID-UL '#WORDPRES'  -->
+              <use xlink:href="images/sprite.svg#wordpress"></use>
+            </svg>
+          </span>
+
+          <h3 class="caracteristica__titlu">Creare Usora prin Wordpress</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+            animi dolorem quasi veritatis exercitationem veniam sit error quos
+            numquam mollitia?
+          </p>
+
+          <a href="#" class="link-sageata">Află Mai Multe</a>
+        </div>
+
+        <!-- PICTURE -->
+        <picture data-aos="zoom-in-left">
+          <!-- WEBP -->
+          <source
+            type="image/webp"
+            srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
+          />
+
+          <!-- JPG -->
+          <source
+            type="image/jpg"
+            srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
+          />
+          <img
+            class="caracteristica__imagine"
+            src="images/wordpress@2x.jpg"
+            alt=""
+          />
+        </picture>
+      </article>
+
+      <!-- ARTICOL 4 -->
+      <article class="grid grid--2-cols caracteristica">
+        <div data-aos="fade-left" class="caracteristica__continut">
+          <!-- INTRODUCEM ICON IN CONTAINER (PT. CREARE CERC) -->
+          <span class="icon-container">
+            <!-- ICON 'SVG' -->
+            <svg class="icon icon--principal">
+              <!-- INCARCAM DIN FISI
+              ERUL 'SPRITE.SVG'__ ID-UL '#CLOCK'  -->
+              <use xlink:href="images/sprite.svg#clock"></use>
+            </svg>
+          </span>
+
+          <h3 class="caracteristica__titlu">Suport Expert</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam
+            animi dolorem quasi veritatis exercitationem veniam sit error quos
+            numquam mollitia?
+          </p>
+
+          <a href="#" class="link-sageata">Află Mai Multe</a>
+        </div>
+
+        <!-- PICTURE -->
+        <picture data-aos="zoom-in-right">
+          <!-- WEBP -->
+          <source
+            type="image/webp"
+            srcset="images/support.webp 1x, images/support@2x.webp 2x"
+          />
+
+          <!-- JPG -->
+          <source
+            type="image/jpg"
+            srcset="images/support.jpg 1x, images/support@2x.jpg 2x"
+          />
+          <img
+            class="caracteristica__imagine"
+            src="images/support@2x.jpg"
             alt=""
           />
         </picture>
@@ -473,7 +569,7 @@
           <div class="grid grid--2-cols">
             <div class="testimonial__image">
               <img
-                src="images/testimonial.jpg"
+                src="images/testimonial.png"
                 alt="Un clint, zambitor, fericit."
               />
 
@@ -521,7 +617,7 @@
 
     <!-- (CP 8) SEC. CALLOUTS  MESSAGE BOX  (CASETE  DE  MESAJE DE  INSTINTARI) -->
     <div class="container">
-      <div class="callout callout--principal">
+      <div class="callout callout--principal callout-signup">
         <div class="grid grid--2-cols">
           <div class="callout__continut">
             <h2 class="callout__titlu">Sunteți Gata să Incepeți?</h2>
@@ -543,7 +639,7 @@
     <footer class="bloc bloc--negru footer">
       <!-- CONTAINER  GRID -->
       <div class="container grid footer__sections">
-        <!-- COLLAPSIBLES 1 (PLIABILE) -->
+        <!-- COL.2 -  COLLAPSIBLES 1 (PLIABILE) -->
         <section class="collapsible collapsible--deschis footer__section">
           <div class="collapsible__header">
             <h2 class="collapsible__titlu footer__titlu">Produse</h2>
@@ -565,7 +661,7 @@
           </div>
         </section>
 
-        <!-- COLLAPSIBLES 2 (PLIABILE) -->
+        <!-- COL. 3 - COLLAPSIBLES 2 (PLIABILE) -->
         <section class="collapsible footer__section">
           <div class="collapsible__header">
             <h2 class="collapsible__titlu footer__titlu">Companie</h2>
@@ -587,7 +683,7 @@
           </div>
         </section>
 
-        <!-- COLLAPSIBLES 3 (PLIABILE) -->
+        <!-- COL. 4 - COLLAPSIBLES 3 (PLIABILE) -->
         <section class="collapsible footer__section">
           <div class="collapsible__header">
             <h2 class="collapsible__titlu footer__titlu">Suport</h2>
@@ -609,7 +705,7 @@
           </div>
         </section>
 
-        <!-- COLLAPSIBLES 4 (PLIABILE) -->
+        <!-- COL. 5 - COLLAPSIBLES 4 (PLIABILE) -->
         <section class="collapsible footer__section">
           <div class="collapsible__header">
             <h2 class="collapsible__titlu footer__titlu">Domenii</h2>
@@ -631,7 +727,7 @@
           </div>
         </section>
 
-        <!-- SEC. FOOTER__BRAND  -->
+        <!-- COL. 1/5  'FOOTER__BRAND'  -->
         <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright 2021 Marius Chivu</p>
