--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
       rel="stylesheet"
     />
 
-    <!-- NORMALIZE CSS -->
-    <link rel="stylesheet" href="css/normalize.css" />
-
     <!-- STYLE CSS -->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -68,7 +65,7 @@
         <!-- (2) ICON "MOBILE MENU"   -->
         <svg class="icon icon--alb nav__comutare">
           <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' __ ID-UL '#MENU'  -->
-          <use xlink:href="images/sprite.svg#menu"></use>
+          <use href="images/sprite.svg#menu"></use>
         </svg>
 
         <!-- (3) LISTA 'MENIU' -->
@@ -149,7 +146,7 @@
           <!-- ICON 'SVG' -->
           <svg class="icon icon--alb">
             <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' __ ID-UL '#SEARCH'  -->
-            <use xlink:href="images/sprite.svg#search"></use>
+            <use href="images/sprite.svg#search"></use>
           </svg>
           Cauta
         </button>
@@ -279,7 +276,7 @@
             <svg class="icon icon--principal">
               <!-- INCARCAM DIN FISI
               ERUL 'SPRITE.SVG'__ ID-UL '#EASY'  -->
-              <use xlink:href="images/sprite.svg#easy"></use>
+              <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
 
@@ -323,7 +320,7 @@
             <svg class="icon icon--principal">
               <!-- INCARCAM DIN FISI
               ERUL 'SPRITE.SVG'__ ID-UL '#COMPUTER'  -->
-              <use xlink:href="images/sprite.svg#computer"></use>
+              <use href="images/sprite.svg#computer"></use>
             </svg>
           </span>
 
@@ -369,7 +366,7 @@
             <svg class="icon icon--principal">
               <!-- INCARCAM DIN FISI
               ERUL 'SPRITE.SVG'__ ID-UL '#WORDPRES'  -->
-              <use xlink:href="images/sprite.svg#wordpress"></use>
+              <use href="images/sprite.svg#wordpress"></use>
             </svg>
           </span>
 
@@ -413,7 +410,7 @@
             <svg class="icon icon--principal">
               <!-- INCARCAM DIN FISI
               ERUL 'SPRITE.SVG'__ ID-UL '#CLOCK'  -->
-              <use xlink:href="images/sprite.svg#clock"></use>
+              <use href="images/sprite.svg#clock"></use>
             </svg>
           </span>
 
@@ -484,7 +481,7 @@
                 <!-- ICON 'SVG' -->
                 <svg class="icon icon--principal">
                   <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG'__ ID-UL '#SNAP'  -->
-                  <use xlink:href="images/sprite.svg#snap"></use>
+                  <use href="images/sprite.svg#snap"></use>
                 </svg>
               </div>
 
@@ -509,7 +506,7 @@
                 <!-- ICON 'SVG' -->
                 <svg class="icon icon--principal">
                   <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' __ ID-UL '#GROWTH'  -->
-                  <use xlink:href="images/sprite.svg#growth"></use>
+                  <use href="images/sprite.svg#growth"></use>
                 </svg>
               </div>
 
@@ -532,7 +529,7 @@
                 <!-- ICON 'SVG' -->
                 <svg class="icon icon--principal">
                   <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' __ ID-UL '#WORDPRESS'  -->
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                  <use href="images/sprite.svg#wordpress"></use>
                 </svg>
               </div>
 
@@ -578,7 +575,7 @@
                 <!-- ICON 'SVG' -->
                 <svg class="icon icon--alb icon--mic">
                   <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' __ ID-UL '#QUOTESSS'  -->
-                  <use xlink:href="images/sprite.svg#quotes"></use>
+                  <use href="images/sprite.svg#quotes"></use>
                 </svg>
               </span>
             </div>
@@ -598,7 +595,7 @@
                     <!-- ICON 'SVG' -->
                     <svg class="icon icon--principal linie__citat">
                       <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' __ ID-UL '#LINE'  -->
-                      <use xlink:href="images/sprite.svg#line"></use>
+                      <use href="images/sprite.svg#line"></use>
                     </svg>
                   </div>
 
@@ -647,7 +644,7 @@
             <!-- ICON 'SVG' -->
             <svg class="icon icon--alb collapsible__icon-chevron">
               <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' __ ID-UL '#CHEVRON'  -->
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
 
@@ -669,7 +666,7 @@
             <!-- ICON 'SVG' -->
             <svg class="icon icon--alb collapsible__icon-chevron">
               <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' - ID-UL '#CHEVRON'  -->
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
 
@@ -691,7 +688,7 @@
             <!-- ICON 'SVG' -->
             <svg class="icon icon--alb collapsible__icon-chevron">
               <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' __ ID-UL '#CHEVRON'  -->
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
 
@@ -713,7 +710,7 @@
             <!-- ICON 'SVG' -->
             <svg class="icon icon--alb collapsible__icon-chevron">
               <!-- INCARCAM DIN FISIERUL 'SPRITE.SVG' __ ID-UL '#CHEVRON'  -->
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
 
