BTN_CLASS-CORECTED

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       <!-- (CP 1) NAVIGATION - BG. "NEGRU" -->
       <nav class="nav collapsible">
         <!-- (1) LOGO -->
-        <a class="nav__brand" href="/"><img src="images/logo.svg" alt="" /></a>
+        <a aria-label="class" ="nav__brand" href="/"
+          ><img src="images/logo.svg" alt=""
+        /></a>
 
         <!-- (2) ICON "MOBILE MENU"   -->
         <svg class="icon icon--alb nav__comutare">
@@ -135,7 +137,9 @@
       <!-- GRUPAREA CAMPURILOR INPUT   -->
       <div class="input-group">
         <!-- INPUTS (INTRATI) -->
+        <!-- 'ARIA' = 'ACCESIBLE RITCH INTERNET APPLICATION' -->
         <input
+          aria-label="Domeniu Web"
           type="text"
           class="input"
           placeholder="Introduceti numele domeniului aici..."
@@ -173,7 +177,7 @@
             <!-- HEADER CARD -->
             <div class="card__header">
               <h3 class="plan__nume">Intrare</h3>
-              <span class="plan__pret">7&#8364;</span>
+              <span class="plan__pret">8&#8364;</span>
               <span class="plan__facturare-ciclu">/luna</span>
               <span class="badge badge--secundar badge--mic">10% REDUS</span>
               <span class="plan__descriere">Pornire ușoară pe cloud</span>
@@ -248,7 +252,7 @@
               </ul>
 
               <!-- BUTON -->
-              <button class="btn tn--outline btn-block">Cumpara Acum</button>
+              <button class="btn btn--outline btn-block">Cumpara Acum</button>
             </div>
           </div>
         </div>
